# CMakeList.txt : CMake project for Week 2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Week 2")

# Add source to this project's executable.
add_executable (CMakeTarget "Week 2.cpp" "Week 2.h")

# TODO: Add tests and install targets if needed.
