# CMakeList.txt : CMake project for CST8219_Lab2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CST8219_Lab2")

# Add source to this project's executable.
add_executable (CST8219_Lab2 "CST8219_Lab2.cpp" "CST8219_Lab2.h")

# TODO: Add tests and install targets if needed.
